# Instant-Insanity-Puzzle

./: README.md
python/: solve_v1.py  solve_v2.py
rust/: Cargo.toml
rust/src/: main.rs
