[package]
name = "cubes"
version = "0.1.0"
edition = "2024"

[dependencies]
itertools = "0.14.0"
phf = "0.13.1"
phf_macros = "0.13.1"
[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = "0.6"

[profile.release]
codegen-units = 1
lto = "thin"
panic = "abort"

[build]
rustflags = ["-C", "target-cpu=native"]
